tests/unit/Core/Errors/Directory.Build.props
<Project>

    <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />

    <PropertyGroup>
        <RootNamespace>Paraminter.Associating.CSharp.Method.Hesychia.Errors</RootNamespace>
    </PropertyGroup>
    
</Project>